apps/staging/pgadmin/ingress.yaml
---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ts-pgadmin-ingress
#   namespace: pgadmin
# spec:
#   ingressClassName: tailscale
#   defaultBackend:
#     service:
#       name: pgadmin-service
#       port:
#         number: 15432
#   tls:
#     - hosts:
#         - pgadmin-s
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
  namespace: pgadmin
spec:
  ingressClassName: traefik
  rules:
  - host: pgadmin-s.boxadvisers.com
    http:
      paths:
      - backend:
          service:
            name: pgadmin-service
            port:
              number: 15432
        path: /
        pathType: Prefix
